# cifar10-inference-efficientnet

./: CMakeLists.txt  README.md  cifar10_infer.cpp  efficientnet_pq_cifar_q+.weights
include/: pqvm_Conv_1x1_avg_1x1.hpp  pqvm_Conv_1x1_dw___1x1_sc.hpp  pqvm_Conv_1x1_dws2_1x1.hpp  pqvm_Conv_3x3_dw___1x1.hpp  pqvm_Layer.hpp  pqvm_Model.hpp  pqvm_Tensor.hpp
